// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiEmptyPrompt is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiEmptyPrompt testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    color="subdued"
    data-euiicon-type="arrowUp"
  />
  <div
    class="euiSpacer euiSpacer--m"
  />
  <h2
    class="euiTitle euiTitle--medium"
  >
    Title
  </h2>
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiSpacer euiSpacer--m"
    />
    <div
      class="euiText euiText--medium"
    >
      <p>
        Body
      </p>
    </div>
  </span>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div>
    Actions
  </div>
</div>
`;

exports[`EuiEmptyPrompt props actions renders alone 1`] = `
<div
  class="euiEmptyPrompt"
>
  <div
    class="euiSpacer euiSpacer--l"
  />
  actions
</div>
`;

exports[`EuiEmptyPrompt props actions renders an array 1`] = `
<div
  class="euiEmptyPrompt"
>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      action1
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      action2
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props body renders alone 1`] = `
<div
  class="euiEmptyPrompt"
>
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      body
    </div>
  </span>
</div>
`;

exports[`EuiEmptyPrompt props icon renders alone 1`] = `
<div
  class="euiEmptyPrompt"
>
  <span>
    Custom icon
  </span>
  <div
    class="euiSpacer euiSpacer--m"
  />
</div>
`;

exports[`EuiEmptyPrompt props iconType renders alone 1`] = `
<div
  class="euiEmptyPrompt"
>
  <span
    color="subdued"
    data-euiicon-type="arrowUp"
  />
  <div
    class="euiSpacer euiSpacer--m"
  />
</div>
`;

exports[`EuiEmptyPrompt props iconType renders with iconColor 1`] = `
<div
  class="euiEmptyPrompt"
>
  <span
    color="danger"
    data-euiicon-type="arrowUp"
  />
  <div
    class="euiSpacer euiSpacer--m"
  />
</div>
`;

exports[`EuiEmptyPrompt props title renders alone 1`] = `
<div
  class="euiEmptyPrompt"
>
  <div
    class="euiTitle euiTitle--medium"
  >
    title
  </div>
</div>
`;
